# statistical-rethinking

./: =5  README.md  TODO.md  pyproject.toml  utils.py
notebooks/: Lecture 02 - The Garden of Forking Data.ipynb  init_notebook.py
scratchpads/polars/: center.ipynb  crosstab.ipynb
