[project]
name = "statistical-rethinking-2023"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Brian Merchant", email = "brianm@janandjul.com" }
]
dependencies = [
    "polars>=1.6.0",
    "pandas>=2.2.2",
    "arviz>=0.19.0",
    "graphviz>=0.20.3",
    "hvplot>=0.10.0",
    "bokeh>=3.5.2",
    "networkx>=3.3",
    "jupyterlab>=4.2.5",
    "jupyter-bokeh>=4.0.5",
    "jupyter>=1.1.0",
    "rustworkx>=0.15.1",
    "pymc>=5.16.2",
    "scipy>=1.14.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/statistical_rethinking_2023"]
